<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="perf_location_label">Location</string>
    <string name="perf_location_key" translatable="false">location</string>
    <string name="perf_location_default_value" translatable="false">94043</string>

    <string name="perf_units_label">Temperature Units</string>
    <string name="perf_units_key" translatable="false">units</string>
    <string name="perf_unis_default_value" translatable="false">Metric</string>
    <string name="setting_location">Map Location</string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_speed">WIND:<xliff:g id="wind">%s</xliff:g>km\u002Fh</string>
    <string name="format_pressure">Pressure:<xliff:g id="pressure">%s</xliff:g>hPa</string>
    <string name="format_humidity">Humidity:<xliff:g id="humidity">%s</xliff:g>%%</string>
</resources>
